# mimic

./: README  README.md  min.fasta  quickbuild.sh
src/: AminoAcidDist.cpp  AminoAcidDist.h  CMakeLists.txt  Makefile  Peptides.cpp  Peptides.h  conanfile_gcc.txt  mimic.cpp  test.cpp
